Got the map up!
Entirely re-did the map sprite, used a map layout instead of a sprite,
and had to redo it (add spaces) for my own sanity. The map is on, but
there is no collision at this point in time, that should be up tomorrow
(3/2/14) but I'll have to see.
I also made it so one does not have to spam the arrow keys to move
about. pac-man moves forward on his own.
Food should be next week or so, and in sake of time, I have scrapped the
Missile command idea, there will be a very simple AI enemy.

--- a/JSP.css
+++ b/JSP.css
@@ -10,47 +10,18 @@ a{
 color:black;
 }
 
-#INS{
-border:groove #1A1A1A 10px;
-text-align:center;
-width:350px;
-height:225px;
-/*positioning*/
-margin:0px auto;
-top:150px;
-left:400px;
-font-family:Impact;
-font-size:25px;
-}
-
-
-
-#MC_GAME{
-text-align:center;
-/*size*/
-height:200px;
-width:400px;
-/*Asthetics*/
-border:groove #1A1A1A 10px;
-font-family:Impact;
-font-size:25px;
-/*positioning*/
-margin:0px auto;
-top:150px;
-left:400px;
-}
 
 #enchant-stage{
 text-align:center;
 /*size*/
-height:212px;
-width:164px;
+/*height:168px;
+width:208px;*/
 /*Asthetics*/
 border:groove #1A1A1A 10px;
 font-family:Impact;
 font-size:25px;
 /*positioning*/
-margin:0px auto;
+/*margin:0px auto;
 top:150px;
-left:400px;
+left:400px;*/
 }
