Added Dots and Their Collisions!
Yea! I got dots and their collision up and running. I think This is
where I will leave the project, as my original idea was to add missile
command to this, but ran out of time. I might add it over spring break
if I can/feel like it. I might put up another sync/commit tomorrow that
will add a timer of some sort.

--- a/JSP.css
+++ b/JSP.css
@@ -17,7 +17,7 @@ text-align:center;
 /*height:168px;
 width:208px;*/
 /*Asthetics*/
-border:groove #1A1A1A 10px;
+border: #1A1A1A 10px;
 font-family:Impact;
 font-size:25px;
 /*positioning*/
